@@ -20,14 +20,42 @@
 #       Author:  Vicent Mas - vmas@vitables.org
 
 #
-#       Plugin Author: Jorge Ibáñez    -   jorge.ibannez@uam.es
+# Plugin initial draft author: Jorge Ibanez jorge.ibannez@uam.es
+#
 
 """Plugin that provides import of arrays and tables from CSV files.
+
+The pipeline for importing a CSV file is:
+
+CSV file --> numpy array --> tables.Leaf
+
+The numpy array is created via numpy.genfromtxt. The tables.Leaf instance
+is created using the apropriate constructors.
+
+Beware that importing big files is a slow process because the whole file
+has to be read from disk, transformed and write back to disk again so
+there is a lot of disk IO.
+
+Other aspects to take into account:
+
+- creation of tables.Array datasets requires the numpy array containing the
+  whole CSV file to be loaded in memory. If the file is large enough you can
+  run out of memory.
+
+- creation of tables.CArray datasets requires an additional parsing of the
+  whole CSV file in order to find out its number of rows (it is a required
+  argument of the CArray constructor)
+
+- there is a penalty performance when string dtypes are involved. The reason
+  is that string fields use to have variable length so, before the numpy
+  array is created, we need to find out the minimum itemsize required for
+  storing those string fields with no lose of data. This step requires an
+  additional parsing of the whole CSV file.
 """
 
 __docformat__ = 'restructuredtext'
 _context = 'ImportCSV'
-__version__ = '0.3'
+__version__ = '0.5'
 plugin_class = 'ImportCSV'
 
 import os
@@ -43,106 +71,93 @@ from vitables.vtSite import PLUGINSDIR
 
 
 
-def arrayInfo(input_handler, kind):
-    """Return the useful information about the array being created.
+def getArray(buf):
+    """Fill an intermediate numpy array with data read from the CSV file.
+
+    The dtypes are determined by the contents of each column.
+    Multidimensional columns will have string datatype.
+
+    :Parameter `buf`: the data buffer
+    """
+
+    temp_file = tempfile.TemporaryFile()
+    temp_file.writelines(buf)
+    temp_file.seek(0)
+    data = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
+    temp_file.close()
+    return data
+
+
+def tableInfo(input_handler):
+    """Return the useful information about the Table being created.
 
     :Parameters:
     - `input_handler`: the file handler of the inspected file
-    - `kind`: the kind of array being created
     """
 
     # Inspect the CSV file reading its first line
     # The dtypes are determined by the contents of each column
     # Multidimensional columns will have string datatype
-    temp_file = tempfile.TemporaryFile()
-    line = input_handler.readline()
-    temp_file.writelines(line)
-    temp_file.seek(0)
-    data = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
-    temp_file.close()
+    data = getArray(input_handler.readline())
 
-    # Our counting algorithm is faster than looping over lines with
-    # fh.readline and incrementing a counter at every step
-    lines = 0
-    itemsize = 0
-    buf_size = 1024 * 1024
-    read_fh = input_handler.read
-    input_handler.seek(0)
+    # Estimate the number of rows of the file
+    filesize = os.path.getsize(input_handler.name)
+    record_size = data.size * data.itemsize
+    nrows = filesize/record_size
 
-    if data.dtype.name.startswith('string'):
-        # Count lines and find out the biggest itemsize
+    if data.dtype.fields is None:
+        # data is a homogeneous array
+        descr = homogeneousTableInfo(input_handler, data)
+    else:
+        # data is a heterogeneous dataset
+        descr = heterogeneousTableInfo(input_handler, data)
+
+    return (nrows, descr)
+
+
+def heterogeneousTableInfo(input_handler, data):
+    """Return the useful information about the table being created.
+
+    The `data` array is heterogenous, i.e. not all fields have the same
+    dtype.
+
+    :Parameters:
+    - `input_handler`: the file handler of the inspected CSV file
+    - `data`: a numpy array which contains the first line of the CSV file
+    """
+
+    # Stuff used for finding out itemsizes of string fields
+    itemsizes = {}
+    for field in range(0, len(data.dtype)):
+        if data.dtype[field].name.startswith('string'):
+            itemsizes[field] = 0
+
+    # Count lines and, if a dtype is a string, find out its biggest itemsize
+    if itemsizes:
+        buf_size = 1024 * 1024
+        read_fh = input_handler.readlines
+        input_handler.seek(0)
         buf = read_fh(buf_size)
         while buf:
             temp_file = tempfile.TemporaryFile()
             temp_file.writelines(buf)
-            temp_file.seek(0)
-            idata = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
-            itemsize = max(itemsize, idata.dtype.itemsize)
+            for field in itemsizes.keys():
+                temp_file.seek(0)
+                idata = numpy.genfromtxt(temp_file, delimiter=',', 
+                    usecols=(field,), dtype=None)
+                itemsizes[field] = \
+                    max(itemsizes[field], idata.dtype.itemsize)
+                del idata
             temp_file.close()
-            del idata
-            lines += buf.count('\n')
-            buf = read_fh(buf_size)
-    else:
-        # Count lines
-        buf = read_fh(buf_size)
-        while buf:
-            lines += buf.count('\n')
             buf = read_fh(buf_size)
 
-    if itemsize:
-        atom = tables.StringAtom(itemsize)
-    else:
-        atom = tables.Atom.from_dtype(data.dtype)
-
-    # Get the data shape
-    if lines == 1:
-        # Corner case: the file only has one row
-        if kind == 'CArray':
-            array_shape = data.shape
-        elif kind == 'EArray':
-            array_shape = (0, )
-        lines = data.shape[0]
-    elif data.shape == ():
-        # Corner case: the file has just one column
-        if kind == 'CArray':
-            array_shape = (lines, )
-        elif kind == 'EArray':
-            array_shape = (0, )
-    else:
-        # General case: the file is a MxN array
-        if kind == 'CArray':
-            array_shape = (lines, data.shape[0])
-        elif kind == 'EArray':
-            array_shape = (0, data.shape[0])
+    descr = dict([(f, tables.Col.from_dtype(t[0])) for f, t in 
+        data.dtype.fields.items()])
+    for field in itemsizes:
+        descr['f%s' % field] = tables.StringCol(itemsizes[field])
 
     del data
-    input_handler.seek(0)
-    return lines, atom, array_shape
-
-
-def tableInfo(input_handler):
-    """Return the useful information about the table being created.
-
-    :Parameters:
-    - `input_handler`: the file handler of the inspected file
-    """
-
-    # Inspect the CSV file reading its first line
-    # The dtypes are determined by the contents of each column
-    # Multidimensional columns will have string datatype
-    temp_file = tempfile.TemporaryFile()
-    line = input_handler.readline()
-    temp_file.writelines(line)
-    temp_file.seek(0)
-    data = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
-    temp_file.close()
-
-    if data.dtype.fields is None:
-        # data is a homogeneous array
-        return homogeneousTableInfo(input_handler, data)
-    else:
-        # data is a heterogeneous dataset
-        return heterogeneousTableInfo(input_handler, data)
+    return descr
 
 
 def homogeneousTableInfo(input_handler, data):
@@ -155,30 +170,22 @@ def homogeneousTableInfo(input_handler, data):
     - `data`: a numpy array which contains the first line of the CSV file
     """
 
-    # Our counting algorithm is faster than looping over lines with
-    # fh.readline and incrementing a counter at every step
-    lines = 0
-    buf_size = 1024 * 1024
-    read_fh = input_handler.read
-    input_handler.seek(0)
-
-    # Count lines and, if dtype is a string, find out the biggest itemsize
-    buf = read_fh(buf_size)
+    # If dtype is a string, find out the biggest itemsize
     if data.dtype.name.startswith('string'):
+        buf_size = 1024 * 1024
+        read_fh = input_handler.readlines
+        input_handler.seek(0)
+        buf = read_fh(buf_size)
         itemsize = 0
         while buf:
             temp_file = tempfile.TemporaryFile()
             temp_file.writelines(buf)
             temp_file.seek(0)
+            temp_file.seek(0)
             idata = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
             itemsize = max(itemsize, idata.dtype.itemsize)
             del idata
             temp_file.close()
-            lines += buf.count('\n')
-            buf = read_fh(buf_size)
-    else:
-        while buf:
-            lines += buf.count('\n')
             buf = read_fh(buf_size)
 
     if data.shape:
@@ -196,61 +203,122 @@ def homogeneousTableInfo(input_handler, data):
             for field in data_fields])
 
     del data
-    return (lines, descr)
+    return descr
 
 
-def heterogeneousTableInfo(input_handler, data):
-    """Return the useful information about the table being created.
-
-    The `data` array is heterogenous, i.e. not all fields have the same
-    dtype.
+def earrayInfo(input_handler):
+    """Return the useful information about the EArray being created.
 
     :Parameters:
-    - `input_handler`: the file handler of the inspected CSV file
-    - `data`: a numpy array which contains the first line of the CSV file
+    - `input_handler`: the file handler of the inspected file
     """
 
-    # Our counting algorithm is faster than looping over lines with
-    # fh.readline and incrementing a counter at every step
-    lines = 0
-    buf_size = 1024 * 1024
-    read_fh = input_handler.read
-    input_handler.seek(0)
+    # Inspect the CSV file reading its first line
+    # The dtypes are determined by the contents of each column
+    # Multidimensional columns will have string datatype
+    data = getArray(input_handler.readline())
 
-    # Stuff used for finding out itemsizes of string fields
-    itemsizes = {}
-    for field in range(0, len(data.dtype)):
-        if data.dtype[field].name.startswith('string'):
-            itemsizes[field] = 0
+    # Estimate the number of rows of the file
+    filesize = os.path.getsize(input_handler.name)
+    record_size = data.size * data.itemsize
+    nrows = filesize/record_size
 
-    # Count lines and, if a dtype is a string, find out its biggest itemsize
-    buf = read_fh(buf_size)
-    if itemsizes:
+    if data.dtype.name.startswith('string'):
+        # Find out the biggest itemsize
+        itemsize = 0
+        buf_size = 1024 * 1024
+        read_fh = input_handler.readlines
+        input_handler.seek(0)
+        buf = read_fh(buf_size)
         while buf:
             temp_file = tempfile.TemporaryFile()
             temp_file.writelines(buf)
-            for field in itemsizes.keys():
-                temp_file.seek(0)
-                idata = numpy.genfromtxt(temp_file, delimiter=',', 
-                    usecols=(field,), dtype=None)
-                itemsizes[field] = \
-                    max(itemsizes[field], idata.dtype.itemsize)
-                del idata
+            temp_file.seek(0)
+            idata = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
+            itemsize = max(itemsize, idata.dtype.itemsize)
             temp_file.close()
-            lines += buf.count('\n')
+            del idata
             buf = read_fh(buf_size)
+        atom = tables.StringAtom(itemsize)
     else:
-        while buf:
-            lines += buf.count('\n')
-            buf = read_fh(buf_size)
+        atom = tables.Atom.from_dtype(data.dtype)
 
-    descr = dict([(f, tables.Col.from_dtype(t[0])) for f, t in 
-        data.dtype.fields.items()])
-    for field in itemsizes:
-        descr['f%s' % field] = tables.StringCol(itemsizes[field])
+    # Get the data shape
+    if nrows < 2:
+        # Corner case: the file only has one row
+        array_shape = (0, )
+    elif data.shape == ():
+        # Corner case: the file has just one column
+        array_shape = (0, )
+    else:
+        # General case: the file is a MxN array
+        array_shape = (0, data.shape[0])
 
     del data
-    return (lines, descr)
+    input_handler.seek(0)
+    return nrows, atom, array_shape
+
+
+def carrayInfo(input_handler):
+    """Return the useful information about the CArray being created.
+
+    :Parameters:
+    - `input_handler`: the file handler of the inspected file
+    """
+
+    # Inspect the CSV file reading its first line
+    # The dtypes are determined by the contents of each column
+    # Multidimensional columns will have string datatype
+    data = getArray(input_handler.readline())
+
+    # This counting algorithm is faster than looping over lines with
+    # fh.readline and incrementing a counter at every step
+    lines = 0
+    itemsize = 0
+    buf_size = 1024 * 1024
+    read_fh = input_handler.readlines
+    input_handler.seek(0)
+
+    if data.dtype.name.startswith('string'):
+        # Count lines and find out the biggest itemsize
+        buf = read_fh(buf_size)
+        while buf:
+            temp_file = tempfile.TemporaryFile()
+            temp_file.writelines(buf)
+            temp_file.seek(0)
+            idata = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
+            itemsize = max(itemsize, idata.dtype.itemsize)
+            temp_file.close()
+            del idata
+            lines += len(buf)
+            buf = read_fh(buf_size)
+    else:
+        # Count lines
+        buf = read_fh(buf_size)
+        while buf:
+            lines += len(buf)
+            buf = read_fh(buf_size)
+
+    if itemsize:
+        atom = tables.StringAtom(itemsize)
+    else:
+        atom = tables.Atom.from_dtype(data.dtype)
+
+    # Get the data shape
+    if lines == 1:
+        # Corner case: the file only has one row
+        array_shape = data.shape
+        lines = data.shape[0]
+    elif data.shape == ():
+        # Corner case: the file has just one column
+        array_shape = (lines, )
+    else:
+        # General case: the file is a MxN array
+        array_shape = (lines, data.shape[0])
+
+    del data
+    input_handler.seek(0)
+    return atom, array_shape
 class ImportCSV(object):
     """Provides CSV import capabilities for tables and arrays.
 
@@ -410,73 +478,94 @@ class ImportCSV(object):
 
 
 
-    def importDataset(self, kind):
+    def importTable(self):
         """Import a plain CSV file into a tables.Array object.
 
         :Parameter `kind`: the kind of array to be created (EArray, CArray)
         """
 
+        kind = 'Table'
         filepath, dbdoc = self.getSourceDest(kind)
         if dbdoc is None:
             return
 
         # Import the CSV content
         try:
+            QtGui.qApp.processEvents()
             QtGui.qApp.setOverrideCursor(QtCore.Qt.WaitCursor)
-            chunk_size = 10000
-            input_handler = open(filepath, 'r+')
-            if kind == 'Table':
-                (stop, descr) = tableInfo(input_handler)
-            else:
-                (stop, atom, array_shape) = \
-                    arrayInfo(input_handler, kind)
+            input_handler = open(filepath, 'rU')
+            (nrows, descr) = tableInfo(input_handler)
 
             # Create the dataset
             io_filters = tables.Filters(complevel=9, complib='lzo')
             dataset_name = "imported_%s" % kind
             atitle = 'Source CSV file %s' % \
                 os.path.basename(filepath)
-            if kind == 'CArray':
-                dataset = dbdoc.h5file.createCArray('/', dataset_name, atom, 
-                    array_shape, title=atitle, filters=io_filters)
-            elif kind == 'EArray':
-                dataset = dbdoc.h5file.createEArray('/', dataset_name, atom, 
-                    array_shape, title=atitle, filters=io_filters, 
-                    expectedrows=stop)
-            elif kind == 'Table':
-                dataset = dbdoc.h5file.createTable(\
-                    '/', dataset_name, descr, title=atitle)
+            dataset = dbdoc.h5file.createTable('/', dataset_name, descr, 
+                title=atitle, filters=io_filters, expectedrows=nrows)
 
             # Fill the dataset in a memory effcient way
             input_handler.seek(0)
-            div = numpy.divide(stop, chunk_size)
-            for i in numpy.arange(0, div+1):
-                QtGui.qApp.processEvents()
-                cstart = chunk_size*i
-                if cstart > stop:
-                    cstart = stop
-                cstop = cstart + chunk_size
-                if cstop > stop:
-                    cstop = stop
-                # Fill a intermediate buffer of small size in order to 
-                # save memory when csv file is very large
-                temp_file = tempfile.TemporaryFile()
-                for i in range(cstart, cstop - cstart):
-                    line = input_handler.readline()
-                    temp_file.writelines(line)
-                temp_file.seek(0)
-                data = numpy.genfromtxt(temp_file, delimiter=',', dtype=None)
-                temp_file.close()
-
+            chunk_size = 10000
+            buf_size = chunk_size*dataset.rowsize
+            read_fh = input_handler.readlines
+            buf = read_fh(buf_size)
+            while buf:
+                idata = getArray(buf)
                 # Append data to the dataset
-                if kind == 'CArray':
-                    dataset[cstart:cstop] = data
-                elif kind == 'EArray':
-                    dataset.append(data)
-                elif kind == 'Table':
-                    dataset.append(data)
+                dataset.append(idata)
                 dataset.flush()
-                del data
+                del idata
+                buf = read_fh(buf_size)
+            dbdoc.h5file.flush()
+        except:
+            vitables.utils.formatExceptionInfo()
+        finally:
+            QtGui.qApp.restoreOverrideCursor()
+            input_handler.close()
+
+
+    def importEArray(self):
+        """Import a plain CSV file into a tables.EArray object.
+
+        This is a slot method. See `addEntry` method for details.
+        """
+
+        kind = 'EArray'
+        filepath, dbdoc = self.getSourceDest(kind)
+        if dbdoc is None:
+            return
+
+        # Import the CSV content
+        try:
+            QtGui.qApp.processEvents()
+            QtGui.qApp.setOverrideCursor(QtCore.Qt.WaitCursor)
+            chunk_size = 10000
+            input_handler = open(filepath, 'r+')
+            (nrows, atom, array_shape) = earrayInfo(input_handler)
+
+            # Create the dataset
+            io_filters = tables.Filters(complevel=9, complib='lzo')
+            dataset_name = "imported_%s" % kind
+            atitle = 'Source CSV file %s' % \
+                os.path.basename(filepath)
+            dataset = dbdoc.h5file.createEArray('/', dataset_name, atom, 
+                array_shape, title=atitle, filters=io_filters, 
+                expectedrows=nrows)
+
+            # Fill the dataset in a memory effcient way
+            input_handler.seek(0)
+            chunk_size = 10000
+            buf_size = chunk_size*dataset.rowsize
+            read_fh = input_handler.readlines
+            buf = read_fh(buf_size)
+            while buf:
+                idata = getArray(buf)
+                # Append data to the dataset
+                dataset.append(idata)
+                dataset.flush()
+                del idata
+                buf = read_fh(buf_size)
             dbdoc.h5file.flush()
         except:
             vitables.utils.formatExceptionInfo()
@@ -490,23 +579,50 @@ class ImportCSV(object):
 
         This is a slot method. See `addEntry` method for details.
         """
-        self.importDataset('CArray')
 
+        kind = 'CArray'
+        filepath, dbdoc = self.getSourceDest(kind)
+        if dbdoc is None:
+            return
 
-    def importEArray(self):
-        """Import a plain CSV file into a tables.EArray object.
+        # Import the CSV content
+        try:
+            QtGui.qApp.processEvents()
+            QtGui.qApp.setOverrideCursor(QtCore.Qt.WaitCursor)
+            chunk_size = 10000
+            input_handler = open(filepath, 'r+')
+            (atom, array_shape) = carrayInfo(input_handler)
 
-        This is a slot method. See `addEntry` method for details.
-        """
-        self.importDataset('EArray')
+            # Create the dataset
+            io_filters = tables.Filters(complevel=9, complib='lzo')
+            dataset_name = "imported_%s" % kind
+            atitle = 'Source CSV file %s' % \
+                os.path.basename(filepath)
+            dataset = dbdoc.h5file.createCArray('/', dataset_name, atom, 
+                array_shape, title=atitle, filters=io_filters)
 
-
-    def importTable(self):
-        """Import a plain CSV file into a tables.Table object.
-
-        This is a slot method. See `addEntry` method for details.
-        """
-        self.importDataset('Table')
+            # Fill the dataset in a memory effcient way
+            input_handler.seek(0)
+            chunk_size = 10000
+            buf_size = chunk_size*dataset.rowsize
+            read_fh = input_handler.readlines
+            buf = read_fh(buf_size)
+            start = 0
+            while buf:
+                idata = getArray(buf)
+                stop = start + idata.shape[0]
+                # Append data to the dataset
+                dataset[start:stop] = idata
+                dataset.flush()
+                del idata
+                start = stop
+                buf = read_fh(buf_size)
+            dbdoc.h5file.flush()
+        except:
+            vitables.utils.formatExceptionInfo()
+        finally:
+            QtGui.qApp.restoreOverrideCursor()
+            input_handler.close()
 
 
     def importArray(self):
@@ -515,24 +631,24 @@ class ImportCSV(object):
         This is a slot method. See `addEntry` method for details.
         """
 
-        leaf_kind = 'Array'
-        filepath, dbdoc = self.getSourceDest(leaf_kind)
+        kind = 'Array'
+        filepath, dbdoc = self.getSourceDest(kind)
         if dbdoc is None:
             return
 
         # Import the CSV content
         try:
+            QtGui.qApp.processEvents()
             QtGui.qApp.setOverrideCursor(QtCore.Qt.WaitCursor)
             # The dtypes are determined by the contents of each column
             # Multidimensional columns will have string datatype
             data = numpy.genfromtxt(filepath, delimiter=',', dtype=None)
 
             # Create the array
-            array_name = "imported_Array"
+            array_name = "imported_%s" % kind
             title = 'Imported from CSV file %s' % \
                 os.path.basename(filepath)
-            dbdoc.h5file.createArray(\
-                '/', array_name, data, title=title)
+            dbdoc.h5file.createArray('/', array_name, data, title=title)
             dbdoc.h5file.flush()
         except:
             vitables.utils.formatExceptionInfo()
